# kaggle_s6e6_stellar

./: .gitignore  LICENSE  README.md  data_install.py  main.py  pyproject.toml
notebooks/: trial_LR.ipynb  trial_catboost.ipynb  trial_xgb.ipynb
submissions/: submission_v1_LR.csv  submission_v1_LR_optuna_HT.csv  submission_v2_XGB.csv
